# opencv_detectCascade_serial_arduino_pantil_complete

./: CMakeLists.txt  main.cpp  runMain
resource/: CamSetting.cpp  CamSetting.h  SerialPort.cpp  SerialPort.h
